--- a/index.html
+++ b/index.html
@@ -365,6 +365,58 @@
         </div>
       </div>
 
+<!-- Project Five Row -->
+<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+  <div class="col-lg-6">
+    <div class="slider project-slider">
+      <div class="image-bg" style="background-image: url(img/slider/4.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/5.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/6.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/7.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/1.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/2.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/3.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/11.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/12.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/13.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/16.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/15.jpg);"></div>
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="bg-black text-center h-100 project">
+      <div class="d-flex h-100">
+        <div class="project-text w-100 my-auto text-center text-lg-left">
+          <h4 class="text-white">Photos</h4>
+          <p class="mb-0 text-white-50">I am a travelholic. These are some photos I took when I travelled to Taiwan :)</p>
+          <hr class="d-none d-lg-block mb-0 ml-0">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<style>
+  .project-slider {
+    height: 100%;
+    min-height: 400px;
+  }
+
+  .project-slider .slick-list,
+  .project-slider .slick-track,
+  .project-slider .slick-slide,
+  .project-slider .slick-slide>div {
+    height: 100%;
+  }
+
+  .project-slider .image-bg {
+    height: 100%;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+</style>
+
     </div>
   </section>
 
