--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
     <div class="bg-black text-center h-100 project">
       <div class="d-flex h-100">
         <div class="project-text w-100 my-auto text-center text-lg-left">
-          <h4 class="text-white">Photos</h4>
-          <p class="mb-0 text-white-50">I am a travelholic. These are some photos I took when I travelled to Taiwan :)</p>
+          <h4 class="text-white">Copywriting</h4>
+          <p class="mb-0 text-white-50">I love reading many different stories and watching different movies. Therefore, I have many ideas in my mind to write a copy. </p>
           <hr class="d-none d-lg-block mb-0 ml-0">
         </div>
       </div>
