--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
   <div class="col-lg-6">
     <div class="slider project-slider">
-      <div class="image-bg" style="background-image: url(img/slider/4.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writingconcept1);"></div>
       <div class="image-bg" style="background-image: url(img/slider/5.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/6.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/7.jpg);"></div>
