--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
   <div class="col-lg-6">
     <div class="slider project-slider">
       <div class="image-bg" style="background-image: url(img/slider/writingconcept1.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/5.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writingconcept2.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/6.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/7.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/1.jpg);"></div>
