--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     <div class="slider project-slider">
       <div class="image-bg" style="background-image: url(img/slider/writingconcept1.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/writingconcept2.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/6.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writing2.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/7.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/1.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/2.jpg);"></div>
