--- a/index.html
+++ b/index.html
@@ -372,15 +372,10 @@
       <div class="image-bg" style="background-image: url(img/slider/writingconcept1.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/writingconcept2.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/writing2.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/7.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/1.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/2.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/3.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/11.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/12.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/13.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/16.jpg);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/15.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writing3.jpg);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writing4.png);"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writing5.png;"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writing6.png);"></div>
     </div>
   </div>
   <div class="col-lg-6">
