--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
   .project-slider .image-bg {
     height: 100%;
     background-position: center center;
-    background-size: contain;
+    background-size: auto;
     background-repeat: no-repeat;
   }
 </style>
