--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     .slider img{
       width: 100%;
       background-position: center center;
-      background-size: contain;
+      background-size: auto;
       background-repeat: no-repeat;
       }
 
