--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     .slider img{
       width: 100%;
       background-position: center center;
-      background-size: auto;
+      background-size: contain;
       background-repeat: no-repeat;
       }
 
@@ -393,7 +393,7 @@
 
 <style>
   .project-slider {
-    height: 100%;
+    height: 200%;
     min-height: 400px;
   }
 
@@ -401,11 +401,11 @@
   .project-slider .slick-track,
   .project-slider .slick-slide,
   .project-slider .slick-slide>div {
-    height: 100%;
+    height: 200%;
   }
 
   .project-slider .image-bg {
-    height: 100%;
+    height: 200%;
     background-position: center center;
     background-size: contain;
     background-repeat: no-repeat;
