--- a/index.html
+++ b/index.html
@@ -391,6 +391,32 @@
   </div>
 </div>
 
+<!-- Intro Section -->
+        <br/>
+        <br/>
+        <p>This is a real client project that me and my team made a campaign for The Nesbitt Centre, which is a centre aims at helping the mentally disable people.</p>
+        <p>We create a character call "arm arm" and made a series of 4 posters</p>
+        <div class="slider">
+          <div><img src="img/slider/armarm 1.png"></div>
+          <div><img src="img/slider/armarm2.png"></div>
+          <div><img src="img/slider/armarm3.png"></div>
+          <div><img src="img/slider/armarm4.png"></div>
+          <div><img src="img/slider/armarm5.png"></div>
+          <div><img src="img/slider/armarm6.png"></div>
+          <div><img src="img/slider/armarm11.png"></div>
+          <div><img src="img/slider/armarm7.png"></div>
+          <div><img src="img/slider/armarm8.png"></div>
+          <div><img src="img/slider/armarm9.png"></div>
+          <div><img src="img/slider/armarm10.png"></div>
+          <div><img src="img/slider/armarm12.png"></div>
+          <div><img src="img/slider/armarm13.png"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <style>
   .project-slider {
     height: 100%;
