--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
   </div>
 </div>
 
-<!-- Intro Section -->
+
+<!-- Project Six Row -->
         <br/>
         <br/>
         <p>This is a real client project that me and my team made a campaign for The Nesbitt Centre, which is a centre aims at helping the mentally disable people.</p>
@@ -414,7 +415,8 @@
       </div>
     </div>
   </div>
-</section>
+
+
 
 
 <style>
@@ -428,7 +430,7 @@
   .project-slider .slick-slide,
   .project-slider .slick-slide>div {
     height: 100%;
-  }
+  
 
   .project-slider .image-bg {
     height: 100%;
