--- a/index.html
+++ b/index.html
@@ -390,17 +390,55 @@
     </div>
   </div>
 </div>
+      <!-- Project Six Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <div class="slider project-slider">
+            <div class="image-bg" style="background-image: url(img/slider/homeate.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/printsss-01.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/printsss-02.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/printsss-03.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/pdfinal.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/outdoor.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/media.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/instruction.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/hang.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/mock2.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/mock5.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/mock1.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/mock3.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/mock4.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/mock6.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/package.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/popup.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/popup3.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/popup2.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/website.png;"></div>
+
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Real Brand Project</h4>
+                <p class="mb-0 text-white-50">This is a real client project that me and my team have to make some print ad and brand building for a new sub-brand of Camel print</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
-<!-- Project Six Row -->
+
+<!-- Project Seven Row -->
         <br/>
         <br/>
         <p>This is a real client project that me and my team made a campaign for The Nesbitt Centre, which is a centre aims at helping the mentally disable people.</p>
         <p>We create a character call "arm arm" and made a series of 4 posters</p>
         <div class="slider">
           <div><img src="img/slider/armarm 1.png"></div>
-          <div><img src="img/slider/armarm2.png"></div>
-          <div><img src="img/slider/armarm3.png"></div>
           <div><img src="img/slider/armarm4.png"></div>
           <div><img src="img/slider/armarm5.png"></div>
           <div><img src="img/slider/armarm6.png"></div>
@@ -414,6 +452,7 @@
         </div>
       </div>
     </div>
+    
   </div>
 
 
