--- a/index.html
+++ b/index.html
@@ -450,6 +450,20 @@
           <div><img src="img/slider/armarm12.png"></div>
           <div><img src="img/slider/armarm13.png"></div>
         </div>
+<!-- Project Seven Row -->
+<br/>
+<br/>
+<p>This is a real client project that me and my team made a campaign for The Nesbitt Centre, which is a centre aims at helping the mentally disable people.</p>
+<p>We create a character call "arm arm" and made a series of 4 posters</p>
+<div class="slider">
+  <div><img src="img/slider/MAC.png"></div>
+  <div><img src="img/slider/igstory.png"></div>
+  <div><img src="img/slider/igstory2.png"></div>
+  <div><img src="img/slider/igstory3.png"></div>
+  <div><img src="img/slider/igfilter.png"></div>
+  <div><img src="img/slider/scgame.png"></div>
+</div>
+
       </div>
     </div>
     
