--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
+      <style>
+      .container img{
+        width: 100%;
+        background-position: center center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        }
+      </style>
+      
 
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
@@ -435,8 +444,10 @@
 <!-- Project Seven Row -->
         <br/>
         <br/>
+        <div class="mb-4 text-center bg-light">
+        <h2 class="mb-4">The Nesbitt Centre</h2>
         <p>This is a real client project that me and my team made a campaign for The Nesbitt Centre, which is a centre aims at helping the mentally disable people.</p>
-        <p>We create a character call "arm arm" and made a series of 4 posters</p>
+        <p>We create a character call "arm arm" and made a series of 4 posters</p></div>
         <div class="slider">
           <div><img src="img/slider/armarm 1.png"></div>
           <div><img src="img/slider/armarm4.png"></div>
@@ -453,8 +464,10 @@
 <!-- Project Seven Row -->
 <br/>
 <br/>
+<div class="mb-4 text-center bg-light">
+<h2 class="mb-4">M.A.C</h2>
 <p>This is a real client project that me and my team made a campaign for The Nesbitt Centre, which is a centre aims at helping the mentally disable people.</p>
-<p>We create a character call "arm arm" and made a series of 4 posters</p>
+<p>We create a character call "arm arm" and made a series of 4 posters</p></div>
 <div class="slider">
   <div><img src="img/slider/MAC.png"></div>
   <div><img src="img/slider/igstory.png"></div>
@@ -463,7 +476,18 @@
   <div><img src="img/slider/igfilter.png"></div>
   <div><img src="img/slider/scgame.png"></div>
 </div>
-
+<!-- Project Eight Row -->
+<br/>
+<br/>
+<div class="mb-4 text-center bg-light">
+<h2 class="mb-4">Recent Sketch</h2>
+<div class="slider">
+  <div><img src="img/slider/cloth.png"></div>
+  <div><img src="img/slider/400.png"></div>
+  <div><img src="img/slider/easter.png"></div>
+  <div><img src="img/slider/daily.png"></div>
+  <div><img src="img/slider/mehaha.jpg"></div>
+</div>
       </div>
     </div>
     
