--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       <div class="image-bg" style="background-image: url(img/slider/writing2.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/writing3.jpg);"></div>
       <div class="image-bg" style="background-image: url(img/slider/writing4.png);"></div>
-      <div class="image-bg" style="background-image: url(img/slider/writing5.png;"></div>
+      <div class="image-bg" style="background-image: url(img/slider/writing5.png);"></div>
       <div class="image-bg" style="background-image: url(img/slider/writing6.png);"></div>
     </div>
   </div>
@@ -407,8 +407,8 @@
             <div class="image-bg" style="background-image: url(img/slider/printsss-01.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/printsss-02.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/printsss-03.png;"></div>
-            <div class="image-bg" style="background-image: url(img/slider/pdfinal.png;"></div>
-            <div class="image-bg" style="background-image: url(img/slider/outdoor.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/pdfinal.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/outdoor.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/media.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/instruction.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/hang.png);"></div>
