--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <div class="image-bg" style="background-image: url(img/slider/homeate.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/printsss-01.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/printsss-02.png);"></div>
-            <div class="image-bg" style="background-image: url(img/slider/printsss-03.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/printsss-03.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/pdfinal.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/outdoor.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/media.png);"></div>
