--- a/index.html
+++ b/index.html
@@ -416,13 +416,13 @@
             <div class="image-bg" style="background-image: url(img/slider/mock5.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/mock1.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/mock3.png);"></div>
-            <div class="image-bg" style="background-image: url(img/slider/mock4.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/mock4.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/mock6.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/package.png);"></div>
-            <div class="image-bg" style="background-image: url(img/slider/popup.png;"></div>
-            <div class="image-bg" style="background-image: url(img/slider/popup3.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/popup.png);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/popup3.png);"></div>
             <div class="image-bg" style="background-image: url(img/slider/popup2.png);"></div>
-            <div class="image-bg" style="background-image: url(img/slider/website.png;"></div>
+            <div class="image-bg" style="background-image: url(img/slider/website.png);"></div>
 
           </div>
         </div>
@@ -509,12 +509,6 @@
     height: 100%;
   
 
-  .project-slider .image-bg {
-    height: 100%;
-    background-position: center center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
 </style>
 
     </div>
