--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   
   <style>
     h1{
-       font-family: 'Indie Flower', cursive;
+       font-family: "Gill Sans", sans-serif;
     }
+
     h2{
       
       font-family: "Gill Sans", sans-serif;
@@ -38,6 +39,21 @@
     h4{
       font-family: "Gill Sans", sans-serif;
     }
+     @font-face{ 
+      font-family: 'cwTeXYen';
+      font-style: normal;
+      font-weight: 500;
+      src: url(//fonts.gstatic.com/ea/cwtexyen/v3/cwTeXYen-zhonly.eot);
+      src: url(//fonts.gstatic.com/ea/cwtexyen/v3/cwTeXYen-zhonly.eot?#iefix) format('embedded-opentype'),
+       url(//fonts.gstatic.com/ea/cwtexyen/v3/cwTeXYen-zhonly.woff2) format('woff2'),
+       url(//fonts.gstatic.com/ea/cwtexyen/v3/cwTeXYen-zhonly.woff) format('woff'),
+       url(//fonts.gstatic.com/ea/cwtexyen/v3/cwTeXYen-zhonly.ttf) format('truetype');
+     }
+    
+     h5{
+      font-family: 'cwTeXYen', sans-serif;
+    } 
+
     li{
       font-family: "Gill Sans", sans-serif;
     }
@@ -45,13 +61,13 @@
       font-family: "Gill Sans", sans-serif;
     }
     p{
-      font-family: 'Indie Flower', cursive;
+      font-family: 'Gill Sans', sans-serif;
     }
     div{
       font-family: "Gill Sans", sans-serif;
     }
     .secondary-font {
-        font-family: 'Indie Flower', cursive;
+        font-family: "Gill Sans", sans-serif;
         font-size: 25px;
     }
     #primary-title{
@@ -125,8 +141,10 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-black-100 mb-4">Who am I?</h2>
-          <p class="text-black-100">I am Charlie from the Polytechnic University. I am a Year 2 Advertising Design student. I love drawing, dreaming, reading, travelling and listening to music.
+          <h5 class="mb-4">我是誰？</h5>
+          <p class="text-black-100">I am Charlie from the Polytechnic University. I am a Year 2 Advertising Design student. I love drawing, thinking, reading, travelling and listening to music.
           And here's my photo:)</p>
+          <h5 class="text-black-100">我是Charlie,一個理工大學廣告設計系二年級的學生。平常我會畫畫，讀書，聽歌，旅遊和思考。:)</h5>
             <img class="img-fluid" src="img/slider/personal.jpg" alt="">
         </div>
       </div>
@@ -172,14 +190,20 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h2 class="mb-4">Introduction</h2>
+          <h5 class="mb-4">自我介紹</h5>
           <p>This is the beginning of my Portfolio. You can listen to this song while you are browsing my artworks. Enjoy! :)</p>
+          <h5>這是我作品習的開始。你可以一邊聽歌一邊觀賞我的作品。:)</h5>
           <div class="intro-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/cLVKn4dzA6o" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <br/>
           <br/>
-          <p>I studied Fine Arts in my secondary school life. Therefore, it would be a challenge for me to study design in University because fine art and design are totally different. Here are my SBA portfolie, daily sketches in my secondary school life and some designs I have done before.</p>
+          <p>I studied Fine Arts in my secondary school life.
+             Therefore, it would be a challenge for me to study design in University because fine art and design are totally different.
+              Here are my SBA portfolie, daily sketches in my secondary school life and some designs I have done before.</p>
+          <h5>我在中學時是在學習視覺藝術的，因此我在大學等於從新學習“設計”這一門新學問。
+            下面是我中學時期的作品習，日常繪圖和一些初期的設計。</h5>
           <div class="slider">
             <div><img src="img/slider/SBA.jpg"></div>
             <div><img src="img/slider/SBA1.jpg"></div>
@@ -227,7 +251,14 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>My Artworks</h4>
-            <p class="text-black-50 mb-0">The pictures below are my Daily sketches, Poster and Logos, Photos and Storyboard done in the previous Semester. They are all different from what I have done before.</p>
+            <h5>我的作品</h5>
+            <p class="text-black-50 mb-0">The pictures below are my Daily sketches, Poster and Logos, 
+              Photos and Storyboard done in the previous Semester. They are all different from what
+               I have done before.</p>
+               <h5 class="text-black-50 mb-0">
+                下面是一些我在大學初期的日常繪圖，海報設計，商標設計，相片和分鏡。
+                對我而言，這些作品與我以往做的完全不同。
+               </h5>
           </div>
         </div>
       </div>
@@ -253,8 +284,9 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Daily Sketches</h4>
+                <h4 class="text-white">Daily Sketches</h4><h5 class="text-white">日常繪圖</h5>
                 <p class="mb-0 text-white-50">There are some daily sketches drawn when I was bored.</p>
+                <h5 class="mb-0 text-white-50">這些是我在無聊時會畫的繪圖。</h5>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -277,9 +309,12 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Posters and Logos</h4>
+                <h5 class="text-white">海報和商標設計</h5>
                 <p class="mb-0 text-white-50">The first poster is about a song called "Sweet but Psycho"</p>
                 <p class="mb-0 text-white-50">The second poster is made based on the feeling of "Hope"</p>
                 <p class="mb-0 text-white-50">The logos are made for a Koi fish expert</p>
+                <h5 class="mb-0 text-white-50">第一張海報是關於一首叫<h4 class="mb-0 text-white-50">"Sweet but Psycho"</h4> 
+                  <h5 class="mb-0 text-white-50">的歌。第二張海報是根據“希望”這種情感做出來的。而那些商標是以”錦鯉專家“為題的。</h5>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -312,7 +347,9 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Photos</h4>
+                <h5 class="text-white">相片</h5>
                 <p class="mb-0 text-white-50">I am a travelholic. These are some photos I took when I travelled to Taiwan :)</p>
+                <h5 class="mb-0 text-white-50">我很喜歡旅遊，這裹有一些我去台灣時拍的照片。</h5>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -366,7 +403,9 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Storyboard</h4>
+                <h5 class="text-white">分鏡</h5>
                 <p class="mb-0 text-white-50">This part is my favourite. I really enjoy creating a story and it is a story of a superhero and his evil wife.</p>
+                <h5 class="mb-0 text-white-50">這是我最喜歡的部分，因為我本身很喜歡創作故事。而這個故事是關於一個退休超級英雄與他邪惡妻子的故事。</h5>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -392,7 +431,9 @@
       <div class="d-flex h-100">
         <div class="project-text w-100 my-auto text-center text-lg-left">
           <h4 class="text-white">Copywriting</h4>
+          <h5 class="text-white">文案</h5>
           <p class="mb-0 text-white-50">I love reading many different stories and watching different movies. Therefore, I have many ideas in my mind to write a copy. </p>
+          <h5 class="mb-0 text-white-50">我很喜歡看不同的故事和電影，所以我腦海裏會有得多不同的情節可以用來寫文案。</h5>
           <hr class="d-none d-lg-block mb-0 ml-0">
         </div>
       </div>
@@ -431,7 +472,9 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Real Brand Project</h4>
+                <h5 class="text-white"> 品牌設計</h5>
                 <p class="mb-0 text-white-50">This is a real client project that me and my team have to make some print ad and brand building for a new sub-brand of Camel print</p>
+                <h5 class="mb-0 text-white-50">這是一份品牌設計的功課，我和我的組員為駱駝漆即將成立的子品牌設計品牌方向和各種包裝設計和宣傳海報等。</h5>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
